--- a/strona.html
+++ b/strona.html
@@ -2,19 +2,13 @@
 <html lang="pl">
 <html>
 	<head>
-		<title>Pszenica i pszczoła</title>
+		<title>Strona</title>
 		<meta charset="UTF-8"/>
-		<meta name="keywords" content="pszczoła,pszenica,zasada,gramatyka" />
-		<meta name="description" content="Wyjątki w pisowni" />
+		<meta name="description" content="Strona" />
 		<meta name="author" content="Antoni Felka" />
 		<meta name="robots" content="all" />
 	</head>
 	<body>
-	<p>
-	Pszenica i pszczoła to znany wyjątek,<br>
-	który zapamiętasz na dobry początek,<br>
-	bo tu nietypowo - po "pe" piszesz "esz".<br>
-	Jeśli nie wiedziałeś, to teraz już wiesz.
-	</p>
+	<h1>Dzień dobry</h1>
 	</body>
 </html>
