--- a/tabela.html
+++ b/tabela.html
@@ -1,1 +1,14 @@
-
+<!doctype html>
+<html lang="pl">
+<html>
+	<head>
+		<title>Strona</title>
+		<meta charset="UTF-8"/>
+		<meta name="description" content="Strona" />
+		<meta name="author" content="Antoni Felka" />
+		<meta name="robots" content="all" />
+	</head>
+	<body>
+	<h1>Dzień dobry</h1>
+	</body>
+</html>
