--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
 		<meta name="description" content="Strona" />
 		<meta name="author" content="Antoni Felka" />
 		<meta name="robots" content="all" />
+		<link rel="stylesheet" href="styl.css">
 	</head>
 	<body>
-	<h1>Dzień dobry</h1>
+		<header>
+			<h1>Strona główna</h1>
+		</header>
+		<main>
+			<button>
+				<a href="" target="_blank">Zadanie</a>
+			</button>
+		</main>
+		<footer>
+			<p><b>Antoni Felka 4D</b></p>
+		</footer>
 	</body>
 </html>
+
