--- a/index.html
+++ b/index.html
@@ -7,26 +7,25 @@
 		<meta name="description" content="Strona" />
 		<meta name="author" content="Antoni Felka" />
 		<meta name="robots" content="all" />
-		<link rel="stylesheet" href="css/styl.css">
+		<link rel="stylesheet" href="styl.css">
 	</head>
 	<body>
 		<header>
 			<h1>Strona główna</h1>
 		</header>
 		<main>
+			<h2>Zadania 3 klasa:</h2>
 			<button>
 				<a href="" target="_blank">Zadanie</a>
 			</button>
+			<h3>Zadania 4 klasa</h3>
 		</main>
 		<footer>
 			<p><b>Antoni Felka 4D</b></p>
-		
-		
-		
-		
 		</footer>
 	</body>
 </html>
+
 
 
 
