--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Strona" />
 		<meta name="author" content="Antoni Felka" />
 		<meta name="robots" content="all" />
-		<link rel="stylesheet" href="styl.css">
+		<link rel="stylesheet" href="css/styl.css">
 	</head>
 	<body>
 		<header>
@@ -16,7 +16,7 @@
 		<main>
 			<h2>Zadania 3 klasa:</h2>
 			<button>
-				<a href="" target="_blank">Zadanie</a>
+				<a href="" target="_blank">Zadanie 67</a>
 			</button>
 			<h3>Zadania 4 klasa</h3>
 		</main>
@@ -25,7 +25,3 @@
 		</footer>
 	</body>
 </html>
-
-
-
-
