--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Strona" />
 		<meta name="author" content="Antoni Felka" />
 		<meta name="robots" content="all" />
-		<link rel="stylesheet" href="css/styl.css">
+		<link rel="stylesheet" href="styl.css">
 	</head>
 	<body>
 		<header>
@@ -25,3 +25,4 @@
 		</footer>
 	</body>
 </html>
+
