--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <html>
 	<head>
-		<title>Strona</title>
+		<title>Strona główna</title>
 		<meta charset="UTF-8"/>
 		<meta name="description" content="Strona" />
 		<meta name="author" content="Antoni Felka" />
@@ -16,13 +16,9 @@
 		<main>
 			<h2>Zadania 3 klasa:</h2>
 			<button>
-				<a href="" target="_blank">Zadanie 67</a>
+				<a href="https://anfe47.github.io/StronaWitryny/zadanie1"_blank"><b>Zadanie 1</b></a>
 			</button>
-			<h3>Zadania 4 klasa</h3>
+			<h2>Zadania 4 klasa:</h2>
 		</main>
-		<footer>
-			<p><b>Antoni Felka 4D</b></p>
-		</footer>
 	</body>
 </html>
-
