Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 		<main>
 			<h2>Zadania 3 klasa:</h2>
 			<button>
-				<a href="https://anfe47.github.io/StronaWitryny/zadanie1"_blank"><b>Zadanie 1</b></a>
+				<a href="https://anfe47.github.io/StronaWitryny/zadanie1" target="_blank"><b>Zadanie 1</b></a>
 			</button>
 			<h2>Zadania 4 klasa:</h2>
 		</main>
