--- a/kotwica.html
+++ b/kotwica.html
@@ -1,1 +1,51 @@
+<!doctype html>
+<html lang="pl">
+<head>
+	<title>Kotwica</title>
+	<meta charset="UTF-8"/>
+	<meta name="description" content="Lekcja14" />
+	<meta name="author" content="Antoni Felka" />
+	<meta name="robots" content="all" />
+	<link rel="stylesheet" href="styl.css">
+</head>
 
+<body>
+
+<section>
+     <h2 id="a_top">Tutaj zdefiniowaliśmy kotwicę o nazwie <i>a_top</i></h2>
+     <p>
+       <a href="#a_bottom">To jest link do kotwicy dolnej</a>
+       <figure>
+         <img src="kotwica1.jpg" />
+         <figcaption>Rysunek 1. Kotwica czerwona</figcaption>
+       </figure>
+     </p>
+</section>
+
+<section>
+     <br /><br /><br /><br />
+     <p>
+       Zdefiniowanie kotwicy w konkretnym miejscu dokumentu HTML<br />
+       i wskazanie tej kotwicy w linku do tego dokumentu,<br />
+       spowoduje po jego otwarciu, przewinięcie -<br />
+       tak aby wiersz zawierający kotwicę znajdował się jak najbliżej górnej
+       krawędzi okna przeglądarki.<br />
+       Aby było co przewijać dodamy dwa rysunki kotwic oraz linie puste,<br />
+       a następnie, zdefiniujemy dwie kotwice.
+       <br /><br /><br />
+     </p>
+</section>
+
+<section>
+     <a name="a_bottom"></a>
+     <h2>Tutaj została zdefiniowana kotwica o nazwie <i>a_bottom</i></h2>
+     <p>
+       <a href="#a_top">To jest link do kotwicy górnej</a>
+       <figure>
+         <img src="kotwica2.jpg" />
+         <figcaption>Rysunek 1. Kotwica szara</figcaption>
+       </figure>
+     </p>
+</section>
+</body>
+</html>
