--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 				<a href="https://anfe47.github.io/StronaWitryny/zadanie1" target="_blank"><b>Zadanie 1</b></a>
 			</button>
 			<h2>Zadania 4 klasa:</h2>
+			<button>
+				<a href="https://anfe47.github.io/StronaWitryny/zadanie1" target="_blank"><b>Zadanie 14</b></a>
+			</button>
 		</main>
 	</body>
 </html>
+
