Revise HTML structure and update links for Porsche
Updated links for Porsche models and corrected some formatting.

--- a/auta.html
+++ b/auta.html
@@ -11,7 +11,7 @@
 	<h1>Porsche</h1>
 	<p><b>Dr.Ing. h. c. F. Porsche AG – niemieckie przedsiębiorstwo produkujące samochody sportowe oraz luksusowe samochody osobowe, założone w 1931 roku przez Ferdinanda Porsche. Siedziba i główna fabryka znajdują się w Stuttgarcie-Zuffenhausen.</b></p>
 
-	<a href="#Macan">Porsche Macan</a>
+	<a href="#Macan">Odnośnik do Porsche Macan</a>
   
 	<figure id="911">
 		<img src="911.jpg" alt="Porsche 911" width="500">
@@ -21,7 +21,7 @@
 	
 	<br><br><br>
 
-  	<a href="#911">Porshce 911</a>
+  	<a href="#911">Odnośnik do Porshce 911</a>
 
   	<figure id="Macan">
     		<img src="macan.jpg" alt="Porshce Macan" width="500">
@@ -31,5 +31,6 @@
 
 </body>
 </html>
+
 
 
