--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 			<button>
 				<a href="https://anfe47.github.io/StronaWitryny/auta" target="_blank"><b>Zadanie 15</b></a>
 			</button>
+			<button>
+				<a href="https://anfe47.github.io/StronaWitryny/lekcja16" target="_blank"><b>Zadanie 16</b></a>
+			</button>
 		</main>
 	</body>
 </html>
-
 
 
