Add Halloween button to main page
Added a new button for Halloween task.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 			<button>
 				<a href="https://anfe47.github.io/StronaWitryny/lekcja16" target="_blank"><b>Zadanie 16</b></a>
 			</button>
+			<button class="halloween">
+				<a href="https://anfe47.github.io/StronaWitryny/halloween" target="_blank"><b>Halloween</b></a>
+			</button>
 		</main>
 	</body>
 </html>
+
 
 
